--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ section#services div.services div.service_bottom { display: flex; align-items: c
 section#services div.services div.service_bottom div.service_item { flex-basis: 80%; display: flex; align-items: flex-start; justify-content: center; flex-direction: column; background-color: #B1BECD; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); padding: 10px; border-radius: 30px; margin: 10px 5%; position: relative; z-index: 1; overflow: hidden; }
 section#services div.services div.service_bottom div.service_item p.service_item_text { color: #29323C;  font-size: 1.3rem; line-height: 2rem; font-weight: 500; text-align: left; margin-bottom: 15px; }
 section#services div.services div.service_bottom div.service_item p.service_item_text span.service_text_span { color: #496D96; font-weight: 700; }
-section#services div.services div.service_bottom div.service_item::after { content: ''; width: 100%; height: 170px; background-image: linear-gradient(45deg, #485563 40%, #29323C 140%); position: absolute; left: 0px; top: 0px; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); z-index: -1; }
+section#services div.services div.service_bottom div.service_item::after { content: ''; width: 100%; height: 170px; background-image: linear-gradient(45deg, #485563 40%, #29323C 140%); position: absolute; left: 0px; top: 0px; border-bottom-left-radius: 15px; border-bottom-right-radius: 15px; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); z-index: -1; }
 section#services div.services div.service_bottom div.service_item div.item_icon { width: 120px; height: 120px; margin-left: auto; margin-right: auto; margin-top: 0px; margin-bottom: 15px; z-index: 2; }
 section#services div.services div.service_bottom div.service_item div.icon_first { background-image: url(./vectors/handshake.svg); background-size: cover; background-position: center; background-repeat: no-repeat; }
 section#services div.services div.service_bottom div.service_item div.icon_second { background-image: url(./vectors/armed_guard.svg); background-size: contain; background-position: center; background-repeat: no-repeat; }
@@ -93,7 +93,7 @@ section#contact div.contact div p { max-width: 1400px; padding: 0px 30px; font-w
 section#contact div.contact div p span.contact_span { color: #29323C; font-weight: 700; }
 section#contact div.contact div.contact_items { max-width: 1300px; min-width: 320px; margin: 50px auto; display: flex; flex-direction: column; justify-content: center; align-items: center; }
 section#contact div.contact div.contact_items div.contact_item { min-width: 250px; min-height: 270px; padding: 20px; text-align: center; border-radius: 30px; padding: 30px; margin: 30px; display: flex; justify-content: center; align-items: center; flex-direction: column; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); transition: 0.3s ease; transition-property: box-shadow; background-color: #B1BECD; position: relative; z-index: -1; overflow: hidden; transform: scale(1); transition-property: box-shadow, transform; }
-section#contact div.contact div.contact_items div.contact_item::after { content: ''; position: absolute; left: 0px; top: 0px; height: 55%; width: 100%; background-image: linear-gradient(45deg, #485563 20%, #29323C 80%); box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); opacity: 0.8; z-index: -1;  }
+section#contact div.contact div.contact_items div.contact_item::after { content: ''; position: absolute; left: 0px; top: 0px; height: 55%; width: 100%; background-image: linear-gradient(45deg, #485563 20%, #29323C 80%); border-bottom-left-radius: 15px; border-bottom-right-radius: 15px; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); opacity: 0.8; z-index: -1;  }
 section#contact div.contact div.contact_items a:hover div.contact_item { box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2); transform: scale(0.95); }
 section#contact div.contact div.contact_items div.contact_item div.icon { width: 70px; margin: 0 auto; margin-bottom: 10px; transition: 0.3s ease; transition-property: transform; }
 section#contact div.contact div.contact_items a:hover div.contact_item div.icon { transform: scale(1.3); }
@@ -104,7 +104,7 @@ section#contact div.contact div.contact_items div.contact_item div.contact_info 
 /* End Contact Section */
 /* Footer Section */
 section#footer {background-color: #29323C; display: flex; flex-direction: column; }
-section#footer div.emblem { width: 150px; height: 150px; background-image: url('./images/jpgobbi_logo_withoutbg_cropped.png'); background-repeat: no-repeat; background-position: center; background-size: 100%; position: absolute; left: auto; top: -80px; margin: auto; z-index: 3; }
+section#footer a#emblem_link div.emblem { width: 150px; height: 150px; background-image: url('./images/jpgobbi_logo_withoutbg_cropped.png'); background-repeat: no-repeat; background-position: center; background-size: 100%; position: absolute; left: 50%; top: -80px; transform: translateX(-50%); margin: auto; z-index: 3; }
 section#footer div.footer { min-height: 170px; flex-direction: column; justify-content: center; align-items: center; position: relative; z-index: 1;}
 section#footer div.footer div.brand { position: absolute; top: 80px; text-align: center; margin: auto; }
 section#footer div.footer div.brand h1.brand_title { color: #496D96; margin-bottom: 10px; font-weight: 700; }
@@ -227,7 +227,7 @@ section#footer div.footer a.social_media_icon i:hover { transform: scale(0.8); t
     section#contact div.contact div.contact_items { width: 100%; display: flex; flex-direction: row; justify-content: space-evenly; align-items: center; margin: 50px; }
     /* End Contact Section */
     /* Footer Section */
-    section#footer div.emblem { width: 200px; height: 200px; top: -120px; }
+    section#footer a#emblem_link div.emblem { width: 200px; height: 200px; top: -120px; }
     /* End Footer Section */
 }
 /* End Media Query For Desktop */
