--- a/styles.css
+++ b/styles.css
@@ -18,13 +18,13 @@ div.brand h1.brand_title span.brand_span { color: #496D96; }
 section#header { position: fixed; z-index: 1000; left: 0px; top: 0px; width: 100vw; height: auto; transition: 0.3s ease-out; transition-property: top; transition-delay: 0.15s; }
 section#header div.header { min-height: 60px; background-color: #29323C; transition: 0.6s ease; }
 section#header div.header div.nav_bar { display: flex; align-items: center; justify-content: space-between; width: 100%; height: 100%; max-width: 1300px; padding: 10px 10px; }
-section#header div.header div.nav_bar div.nav_list ul { list-style: none; position: absolute; background-image: linear-gradient(0deg, #485563 0%, #29323C 100%); width: 100vw; height: 100vh; left: 100%; top: 0%; display: flex; flex-direction: column; justify-content: center; align-items: center; z-index: 1; transition: 0.3s ease; transition-property: left; }
-section#header div.header div.nav_bar div.nav_list ul.active { left: 0%; }
-section#header div.header div.nav_bar div.nav_list ul a { font-size: 3rem; font-weight: 500; letter-spacing: 0.2rem; text-decoration: none; color: #B1BECD; text-transform: uppercase; padding: 20px; display: block; transition: 0.3s ease; transition-property: font-size, color; }
-section#header div.header div.nav_bar div.nav_list ul a::after { content: attr(data-after); position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%) scale(0); color: rgba(240, 248, 255, 0.040); font-size: 6rem; letter-spacing: 50px; z-index: -1; }
-section#header div.header div.nav_bar div.nav_list ul li:hover a { color: #496D96; font-size: 5rem; }
-section#header div.header div.nav_bar div.nav_list ul li a.active { color: #496D96; font-size: 5rem; }
-section#header div.header div.nav_bar div.nav_list ul li a.active::after { transform: translate(-50%, -50%) scale(1); letter-spacing: initial; }
+section#header div.header div.nav_bar div.nav_list ul.nav_options { list-style: none; position: absolute; background-image: linear-gradient(0deg, #485563 0%, #29323C 100%); width: 100vw; height: 100vh; left: 100%; top: 0%; display: flex; flex-direction: column; justify-content: center; align-items: center; z-index: 1; transition: 0.3s ease; transition-property: left; }
+section#header div.header div.nav_bar div.nav_list ul.nav_options.active { left: 0%; }
+section#header div.header div.nav_bar div.nav_list ul.nav_options a { font-size: 3rem; font-weight: 500; letter-spacing: 0.2rem; text-decoration: none; color: #B1BECD; text-transform: uppercase; padding: 20px; display: block; transition: 0.3s ease; transition-property: font-size, color; }
+section#header div.header div.nav_bar div.nav_list ul.nav_options a::after { content: attr(data-after); position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%) scale(0); color: rgba(240, 248, 255, 0.040); font-size: 6rem; letter-spacing: 50px; z-index: -1; }
+section#header div.header div.nav_bar div.nav_list ul.nav_options li:hover a { color: #496D96; font-size: 5rem; }
+section#header div.header div.nav_bar div.nav_list ul.nav_options li a.active { color: #496D96; font-size: 5rem; }
+section#header div.header div.nav_bar div.nav_list ul.nav_options li a.active::after { transform: translate(-50%, -50%) scale(1); letter-spacing: initial; }
 section#header div.header div.nav_bar div.nav_list div.hamburger { height: 50px; width: 50px; display: inline-block; border: 3px solid #354b6c; border-radius: 50%; position: relative; display: flex; align-items: center; justify-content: center; z-index: 100; cursor: pointer; transform: scale(0.8); margin-right: 10px; }
 section#header div.header div.nav_bar div.nav_list div.hamburger::after { position: absolute; content: ''; height: 100%; width: 100%; border-radius: 50%; border: 3px solid #B1BECD; animation: hamburger_puls 1s ease infinite; }
 section#header div.header div.nav_bar div.nav_list div.hamburger div.bar { height: 2px; width: 25px; position: relative; background-color: #496D96; z-index: -1; }
@@ -37,16 +37,15 @@ section#header div.header div.progress_bar { background-color: #29323C; height: 
 /* End Main Header Menu */
 /* Hero Section */
 section#hero div.hero { max-width: 1200px; margin: 0px auto; padding: 0px 50px; justify-content: flex-start; }
-section#hero div.hero div.page_fold { height: 230px; width: 230px; position: absolute; top: 70px; right: 0px; background-image: url(./vectors/Page-Turner.svg); background-repeat: no-repeat; transform: rotate(90deg); background-size: 100%; z-index: -1; }
- /* background by SVGBackgrounds.com */
-section#hero div.hero div h1 { display: block; width: fit-content; font-size: 3.8rem; position: relative; top: 150px; color: transparent; animation: text_reveal 0.5s ease forwards; animation-delay: 1s; }
-section#hero div.hero div h1:nth-child(1) { animation-delay: 1s; }
-section#hero div.hero div h1:nth-child(2) { animation-delay: 2s; }
-section#hero div.hero div h1:nth-child(3) { animation: text_reveal_name 0.5s ease forwards; animation-delay: 3s; }
-section#hero div.hero div h1 span { position: absolute; top: 0px; left: 0px; height: 100%; width: 0%; background-color: #EFEFEB; animation: text_reveal_box 1s ease; animation-delay: 0.5s; }
-section#hero div.hero div h1:nth-child(1) span { animation-delay: 0.5s; }
-section#hero div.hero div h1:nth-child(2) span { animation-delay: 1.5s; }
-section#hero div.hero div h1:nth-child(3) span { animation-delay: 2.5s; }
+section#hero div.hero div.page_fold { height: 230px; width: 230px; position: absolute; top: 70px; right: 0px; background-image: url(./vectors/Page-Turner.svg); background-repeat: no-repeat; transform: rotate(90deg); background-size: 100%; z-index: -1; } /* Background SVG Vector applied developed by SVGBackgrounds.com */
+section#hero div.hero div.hero_content h1.hero_title { display: block; width: fit-content; font-size: 3.8rem; position: relative; top: 150px; color: transparent; animation: text_reveal 0.5s ease forwards; animation-delay: 1s; }
+section#hero div.hero div.hero_content h1.hero_title:nth-child(1) { animation-delay: 1s; }
+section#hero div.hero div.hero_content h1.hero_title:nth-child(2) { animation-delay: 2s; }
+section#hero div.hero div.hero_content h1.hero_title:nth-child(3) { animation: text_reveal_name 0.5s ease forwards; animation-delay: 3s; }
+section#hero div.hero div.hero_content h1.hero_title span.hero_title_box { position: absolute; top: 0px; left: 0px; height: 100%; width: 0%; background-color: #EFEFEB; animation: text_reveal_box 1s ease; animation-delay: 0.5s; }
+section#hero div.hero div.hero_content h1.hero_title:nth-child(1) span.hero_title_box { animation-delay: 0.5s; }
+section#hero div.hero div.hero_content h1.hero_title:nth-child(2) span.hero_title_box { animation-delay: 1.5s; }
+section#hero div.hero div.hero_content h1.hero_title:nth-child(3) span.hero_title_box { animation-delay: 2.5s; }
 section#hero div.hero div.middle { position: absolute; left: 50px; top: 120px; }
 section#hero div.hero div.middle div.mouse { width: 45px; height: 75px; }
 section#hero div.hero div.middle div.mouse::before { content: ''; width: 15px; height: 15px; position: absolute; left: 50%; transform: translateX(-50%); bottom: 20px; margin-left: -8px; cursor: pointer; background-color: #29323C; border-radius: 50%; animation: mouse_scroll 1.7s cubic-bezier(0.75, -0.95, 0.25, 0.5) infinite; }
@@ -67,7 +66,7 @@ section#services div.services div.service_bottom div.service_item div.icon_first
 section#services div.services div.service_bottom div.service_item div.icon_second { background-image: url(./vectors/armed_guard.svg); background-size: contain; background-position: center; background-repeat: no-repeat; }
 section#services div.services div.service_bottom div.service_item div.icon_third { background-image: url(./vectors/unarmed_guard.svg); background-size: cover; background-position: center; background-repeat: no-repeat; }
 section#services div.services div.service_bottom div.service_item div.icon_four { background-image: url(./vectors/recepcionist.svg); background-size: cover; background-position: center; background-repeat: no-repeat; }
-section#services div.services div.service_bottom div.service_item h2 { font-size: 1.6rem; margin: auto; color: #B1BECD; margin-bottom: 15px; text-transform: uppercase; z-index: 2; background-color: #29323C; padding: 10px; border-radius: 12px; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); }
+section#services div.services div.service_bottom div.service_item h2.service_title { font-size: 1.6rem; margin: auto; color: #B1BECD; margin-bottom: 15px; text-transform: uppercase; z-index: 2; background-color: #29323C; padding: 10px; border-radius: 12px; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); }
 /* End Services Section */
 /* Projects Section */
 section#projects div.projects div.projects_header h1.section_title { font-size: 2.6rem; }
@@ -78,29 +77,29 @@ section#projects div.projects { flex-direction: column; max-width: 1400px; margi
 section#projects div.projects div.all_projects { display: flex; align-items: center; justify-content: center; flex-direction: column; margin-top: 50px; background: transparent; }
 section#projects div.projects div.all_projects div.project_item { display: flex; align-items: center; justify-content: center; flex-direction: column; width: 80%; margin: 20px auto; overflow: hidden; border-radius: 30px; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); }
 section#projects div.projects div.all_projects div.project_item div.project_info { padding: 10px; flex-basis: 50%; height: 100%; display: flex; align-items: flex-start; justify-content: center; flex-direction: column; background-color: #485563; }
-section#projects div.projects div.all_projects div.project_item div.project_info h1 { font-size: 1.5rem; font-weight: 700; margin-left: 15px; margin-top: 15px; margin-bottom: 15px; text-transform: uppercase; color: #B1BECD; background-color: #29323C; padding: 15px; border-radius: 15px; margin-left: auto; margin-right: auto; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); }
-section#projects div.projects div.all_projects div.project_item div.project_info p { font-weight: 500; font-size: 1.3rem; color: #B1BECD; line-height: 2.3rem; text-align: left; margin-bottom: 15px; }
-section#projects div.projects div.all_projects div.project_item div.project_info p span {  color: #496D96; font-weight: 700; }
+section#projects div.projects div.all_projects div.project_item div.project_info h1.project_title { font-size: 1.5rem; font-weight: 700; margin-left: 15px; margin-top: 15px; margin-bottom: 15px; text-transform: uppercase; color: #B1BECD; background-color: #29323C; padding: 15px; border-radius: 15px; margin-left: auto; margin-right: auto; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); }
+section#projects div.projects div.all_projects div.project_item div.project_info p.project_description { font-weight: 500; font-size: 1.3rem; color: #B1BECD; line-height: 2.3rem; text-align: left; margin-bottom: 15px; }
+section#projects div.projects div.all_projects div.project_item div.project_info p.project_description span.project_detail {  color: #496D96; font-weight: 700; }
 section#projects div.projects div.all_projects div.project_item div.project_image { flex-basis: 50%; height: 300px; width: 100%; overflow: hidden; position: relative; background-color: #B1BECD; padding: 20px; display: flex; justify-content: center; align-items: center; position: relative; z-index: 1; }
 section#projects div.projects div.all_projects div.project_item div.project_image::after { content: ''; width: 100%; height: 10%; background-color: #485563; position: absolute; left: 0px; top: 0px; z-index: -1; border-bottom-left-radius: 30px; border-bottom-right-radius: 30px; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); }
 section#projects div.projects div.all_projects div.project_item div.project_image img { transition: 0.3s ease; transition-property: transform; width: 90%; height: auto; transform: scale(0.8); bottom: 0px;  }
 section#projects div.projects div.all_projects div.project_item:hover div.project_image img { transform: scale(0.95); }
 /* End Projects Section */
 /* Contact Section */
-section#contact div.contact div h1.section_title { font-size: 2.6rem; }
+section#contact div.contact div.contact_header h1.section_title { font-size: 2.6rem; }
 section#contact div.contact { flex-direction: column; max-width: 1400px; margin: 0px auto; margin-bottom: 50px; }
-section#contact div.contact div p { max-width: 1400px; padding: 0px 30px; font-weight: 400;  }
-section#contact div.contact div p span.contact_span { color: #29323C; font-weight: 700; }
+section#contact div.contact div.contact_header p { max-width: 1400px; padding: 0px 30px; font-weight: 400;  }
+section#contact div.contact div.contact_header p span.contact_span { color: #29323C; font-weight: 700; }
 section#contact div.contact div.contact_items { max-width: 1300px; min-width: 320px; margin: 50px auto; display: flex; flex-direction: column; justify-content: center; align-items: center; }
 section#contact div.contact div.contact_items div.contact_item { min-width: 250px; min-height: 270px; padding: 20px; text-align: center; border-radius: 30px; padding: 30px; margin: 30px; display: flex; justify-content: center; align-items: center; flex-direction: column; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); transition: 0.3s ease; transition-property: box-shadow; background-color: #B1BECD; position: relative; z-index: -1; overflow: hidden; transform: scale(1); transition-property: box-shadow, transform; }
 section#contact div.contact div.contact_items div.contact_item::after { content: ''; position: absolute; left: 0px; top: 0px; height: 55%; width: 100%; background-image: linear-gradient(45deg, #485563 20%, #29323C 80%); border-bottom-left-radius: 15px; border-bottom-right-radius: 15px; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); opacity: 0.8; z-index: -1;  }
 section#contact div.contact div.contact_items a:hover div.contact_item { box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2); transform: scale(0.95); }
 section#contact div.contact div.contact_items div.contact_item div.icon { width: 70px; margin: 0 auto; margin-bottom: 10px; transition: 0.3s ease; transition-property: transform; }
 section#contact div.contact div.contact_items a:hover div.contact_item div.icon { transform: scale(1.3); }
-section#contact div.contact div.contact_items div.contact_item div.contact_info h1 { font-size: 2rem; font-weight: 700; color: #B1BECD; margin-bottom: 40px; text-transform: uppercase; position: absolute; left: 50%; top: 55%; transform: translate(-50%, -55%); z-index: 2; }
+section#contact div.contact div.contact_items div.contact_item div.contact_info h1.contact_title { font-size: 2rem; font-weight: 700; color: #B1BECD; margin-bottom: 40px; text-transform: uppercase; position: absolute; left: 50%; top: 55%; transform: translate(-50%, -55%); z-index: 2; }
 section#contact div.contact div.contact_items div.contact_item div.contact_info::after { content: ''; width: 60%; height: 15%; background-color: #29323C; position: absolute; bottom: 0; left: 50%; top: 55%; transform: translate(-50%, -55%); z-index: 1; border-radius: 12px; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); }
-section#contact div.contact div.contact_items div.contact_item div.contact_info h2 { font-size: 1.5rem; line-height: 2rem; text-transform: uppercase; font-weight: 700; color: #496D96; margin-top: 70px; }
-section#contact div.contact div.contact_items div.contact_item div.contact_info h3 { font-size: 1.5rem; color: #29323C; font-weight: 500; margin-top: 10px; }
+section#contact div.contact div.contact_items div.contact_item div.contact_info h2.contacter { font-size: 1.5rem; line-height: 2rem; text-transform: uppercase; font-weight: 700; color: #496D96; margin-top: 70px; }
+section#contact div.contact div.contact_items div.contact_item div.contact_info h3.contact_detail { font-size: 1.5rem; color: #29323C; font-weight: 500; margin-top: 10px; }
 /* End Contact Section */
 /* Footer Section */
 section#footer {background-color: #29323C; display: flex; flex-direction: column; }
