--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ section#services div.services div.service_top p { padding: 0px 30px; font-weight
 section#services div.services div.service_top p span.services_description_span { color: #29323C; font-weight: 700; }
 section#services div.services div.service_bottom { display: flex; align-items: center; justify-content: center; flex-wrap: wrap; margin-top: 50px; max-width: 1300px; }
 section#services div.services div.service_bottom div.service_item { flex-basis: 80%; display: flex; align-items: flex-start; justify-content: center; flex-direction: column; background-color: #B1BECD; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); padding: 10px; border-radius: 30px; margin: 10px 5%; position: relative; z-index: 1; overflow: hidden; }
-section#services div.services div.service_bottom div.service_item p.service_item_text { color: #29323C; font-size: 1.3rem; line-height: 2rem; font-weight: 500; text-align: left; margin-bottom: 15px; }
+section#services div.services div.service_bottom div.service_item p.service_item_text { color: #29323C; font-size: 1.4rem; line-height: 2rem; font-weight: 500; text-align: left; margin-bottom: 15px; }
 section#services div.services div.service_bottom div.service_item p.service_item_text span.service_text_span { color: #496D96; font-weight: 700; }
 section#services div.services div.service_bottom div.service_item::after { content: ''; width: 100%; height: 170px; background-image: linear-gradient(45deg, #485563 40%, #29323C 140%); position: absolute; left: 0px; top: 0px; border-bottom-left-radius: 30px; border-bottom-right-radius: 30px; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); z-index: -1; }
 section#services div.services div.service_bottom div.service_item div.item_icon { width: 120px; height: 120px; margin-left: auto; margin-right: auto; margin-top: 0px; margin-bottom: 15px; z-index: 2; }
@@ -65,7 +65,7 @@ section#services div.services div.service_bottom div.service_item div.icon_first
 section#services div.services div.service_bottom div.service_item div.icon_second { background-image: url(./vectors/armed_guard.svg); background-size: contain; background-position: center; background-repeat: no-repeat; }
 section#services div.services div.service_bottom div.service_item div.icon_third { background-image: url(./vectors/unarmed_guard.svg); background-size: cover; background-position: center; background-repeat: no-repeat; }
 section#services div.services div.service_bottom div.service_item div.icon_four { background-image: url(./vectors/recepcionist.svg); background-size: cover; background-position: center; background-repeat: no-repeat; }
-section#services div.services div.service_bottom div.service_item h2.service_title { font-size: 1.6rem; margin: auto; color: #B1BECD; margin-bottom: 15px; text-transform: uppercase; z-index: 2; background-color: #29323C; padding: 10px; border-radius: 12px; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); }
+section#services div.services div.service_bottom div.service_item h2.service_title { font-size: 1.5rem; margin: auto; color: #B1BECD; margin-bottom: 15px; text-transform: uppercase; z-index: 2; background-color: #29323C; padding: 10px; border-radius: 12px; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); }
 /* End Services Section */
 /* Projects Section */
 section#projects div.projects div.projects_header h1.section_title { font-size: 2.6rem; }
@@ -77,7 +77,7 @@ section#projects div.projects div.all_projects { display: flex; align-items: cen
 section#projects div.projects div.all_projects div.project_item { display: flex; align-items: center; justify-content: center; flex-direction: column; width: 80%; margin: 20px auto; overflow: hidden; border-radius: 30px; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); }
 section#projects div.projects div.all_projects div.project_item div.project_info { padding: 10px; flex-basis: 50%; height: 100%; display: flex; align-items: flex-start; justify-content: center; flex-direction: column; background-color: #485563; }
 section#projects div.projects div.all_projects div.project_item div.project_info h1.project_title { font-size: 1.5rem; font-weight: 700; margin-left: 15px; margin-top: 15px; margin-bottom: 15px; text-transform: uppercase; color: #B1BECD; background-color: #29323C; padding: 15px; border-radius: 20px; margin-left: auto; margin-right: auto; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); }
-section#projects div.projects div.all_projects div.project_item div.project_info p.project_description { font-weight: 500; font-size: 1.3rem; color: #B1BECD; line-height: 2.3rem; text-align: left; margin-bottom: 15px; }
+section#projects div.projects div.all_projects div.project_item div.project_info p.project_description { font-weight: 500; font-size: 1.4rem; color: #B1BECD; line-height: 2.3rem; text-align: left; margin-bottom: 15px; }
 section#projects div.projects div.all_projects div.project_item div.project_info p.project_description span.project_detail {  color: #496D96; font-weight: 700; }
 section#projects div.projects div.all_projects div.project_item div.project_image { flex-basis: 50%; height: 300px; width: 100%; overflow: hidden; position: relative; background-color: #B1BECD; padding: 20px; display: flex; justify-content: center; align-items: center; position: relative; z-index: 1; }
 section#projects div.projects div.all_projects div.project_item div.project_image::after { content: ''; width: 100%; height: 10%; background-color: #485563; position: absolute; left: 0px; top: 0px; z-index: -1; border-bottom-left-radius: 30px; border-bottom-right-radius: 30px; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); }
@@ -92,10 +92,10 @@ section#contact div.contact div.contact_items { max-width: 1300px; min-width: 32
 section#contact div.contact div.contact_items div.contact_item { min-width: 250px; min-height: 270px; padding: 20px; text-align: center; border-radius: 30px; padding: 30px; margin: 30px; display: flex; justify-content: center; align-items: center; flex-direction: column; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); transition: 0.3s ease; transition-property: box-shadow; background-color: #B1BECD; position: relative; z-index: -1; overflow: hidden; transform: scale(1); transition-property: box-shadow, transform; }
 section#contact div.contact div.contact_items div.contact_item::after { content: ''; position: absolute; left: 0px; top: 0px; height: 55%; width: 100%; background-image: linear-gradient(45deg, #485563 20%, #29323C 80%); border-bottom-left-radius: 30px; border-bottom-right-radius: 30px; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); opacity: 0.8; z-index: -1;  }
 section#contact div.contact div.contact_items div.contact_item div.icon { width: 70px; margin: 0 auto; margin-bottom: 10px; transition: 0.3s ease; transition-property: transform; }
-section#contact div.contact div.contact_items div.contact_item div.contact_info h1.contact_title { font-size: 2rem; font-weight: 700; color: #B1BECD; margin-bottom: 40px; text-transform: uppercase; position: absolute; left: 50%; top: 55%; transform: translate(-50%, -55%); z-index: 2; }
+section#contact div.contact div.contact_items div.contact_item div.contact_info h1.contact_title { font-size: 1.5rem; font-weight: 700; color: #B1BECD; margin-bottom: 40px; text-transform: uppercase; position: absolute; left: 50%; top: 55%; transform: translate(-50%, -55%); z-index: 2; }
 section#contact div.contact div.contact_items div.contact_item div.contact_info::after { content: ''; width: 60%; height: 15%; background-color: #29323C; position: absolute; bottom: 0; left: 50%; top: 55%; transform: translate(-50%, -55%); z-index: 1; border-radius: 12px; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); }
-section#contact div.contact div.contact_items div.contact_item div.contact_info h2.contacter { font-size: 1.5rem; line-height: 2rem; text-transform: uppercase; font-weight: 700; color: #496D96; margin-top: 70px; }
-section#contact div.contact div.contact_items div.contact_item div.contact_info h3.contact_detail { font-size: 1.5rem; color: #29323C; font-weight: 500; margin-top: 10px; }
+section#contact div.contact div.contact_items div.contact_item div.contact_info h2.contacter { font-size: 1.4rem; line-height: 2rem; text-transform: uppercase; font-weight: 700; color: #496D96; margin-top: 70px; }
+section#contact div.contact div.contact_items div.contact_item div.contact_info h3.contact_detail { font-size: 1.4rem; color: #29323C; font-weight: 500; margin-top: 10px; }
 /* End Contact Section */
 /* Footer Section */
 section#footer {background-color: #29323C; display: flex; flex-direction: column; }
@@ -110,7 +110,6 @@ section#footer div.footer div.brand h3.company_address { font-size: 0.8rem; colo
 section#footer div.footer div.brand h4.copyright { font-size: 1rem; font-weight: 500; text-transform: uppercase; color: #B1BECD; }
 section#footer div.footer div.brand h4.copyright span.copy_company { color: #496D96; }
 section#footer div.footer a.social_media_icon i { font-size: 5rem; position: absolute; top: 20px; right: 20px; color: #3B5998; text-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2); transition: all 0.3s; }
-section#footer div.footer a.social_media_icon i:hover { transform: scale(0.8); text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5); }
 /* End Footer Section */
 /* General Keyframes */
     @keyframes hamburger_puls { 0% { opacity: 1; transform: scale(1); } 100% { opacity: 0; transform: scale(1.6); } }
@@ -123,10 +122,6 @@ section#footer div.footer a.social_media_icon i:hover { transform: scale(0.8); t
 @media only screen and (min-width: 768px) {
     /* Main Header Menu */
     div.brand h1.brand_title { font-size: 2.8rem; }
-    section#header div.header div.nav_bar div.nav_list ul a { font-size: 6rem; }
-    section#header div.header div.nav_bar div.nav_list ul a::after { font-size: 14rem; }
-    section#header div.header div.nav_bar div.nav_list ul li:hover a { font-size: 9rem; }
-    section#header div.header div.nav_bar div.nav_list ul li a.active { font-size: 9rem; }
     section#header div.header div.nav_bar div.nav_list div.hamburger { width: 80px; height: 80px; }
     section#header div.header div.nav_bar div.nav_list div.hamburger div.bar { width: 45px; }
     section#header div.header div.nav_bar div.nav_list div.hamburger div.bar::after { top: 12px; }
@@ -135,22 +130,19 @@ section#footer div.footer a.social_media_icon i:hover { transform: scale(0.8); t
     /* Hero Section */
     section#hero div.hero div.page_fold { height: 420px; width: 420px; position: absolute; top: 100px; right: 0px; background-image: url(./vectors/Page-Turner.svg); background-repeat: no-repeat; transform: rotate(90deg); background-size: 100%; z-index: -1; }
     .call_to_action { font-size: 2.5rem; padding: 20px 40px; }
-    section#hero div.hero div h1 { font-size: 7rem; }
-    section#hero div.hero div.middle { position: absolute; left: 50%; top: 90%; transform: translate(-50%, -90%); }
-    section#hero div.hero div.middle div.mouse { border: none; border-radius: 25px; cursor: pointer; }
-    section#hero div.hero div.middle div.mouse::before { width: 10px; height: 10px; left: 25px; }
-        @keyframes mouse_scroll { 0% { opacity: 0; transform: translateY(0) scale(0.4); } 10% { opacity: 1; transform: translateY(2px) scale(1.2); } 100% { opacity: 0; transform: translateY(-40px) scale(0.4); } }
-    /* End Hero Section */
+    section#hero div.hero div.hero_content h1.hero_title { font-size: 6rem; }
+    section#hero div.hero div.middle { position: absolute; right: 0%; bottom: 23px; margin-right: 37px; }
+        /* End Hero Section */
     /* Services Section */
     section#services div.services div.service_top h1.section_title { font-size: 4rem; }
-    section#services div.services div.service_top p { font-size: 1.6rem; padding: 0px 40px; }
+    section#services div.services div.service_top p { font-size: 1.8rem; padding: 0px 40px; }
     section#services div.services div.service_bottom div.service_item { flex-basis: 45%; margin: 2.5%; }
-    section#services div.services div.service_bottom div.service_item p.service_item_text { font-size: 1.4rem; }
-    section#services div.services div.service_bottom div.service_item h2 { font-size: 2rem; }
+    section#services div.services div.service_bottom div.service_item h2.service_title { font-size: 2rem; }
+    section#services div.services div.service_bottom div.service_item p.service_item_text { font-size: 1.6rem; }
     /* End Services Section */
     /* Projects Section */
     section#projects div.projects div.projects_header h1.section_title { font-size: 4rem; }
-    section#projects div.projects div.projects_header p { font-size: 1.6rem; padding: 0px 40px;}
+    section#projects div.projects div.projects_header p { font-size: 1.8rem; padding: 0px 40px;}
     section#projects div.projects div.all_projects { margin: 20px; background-color: transparent; border-radius: 30px; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.3); margin-top: 50px; }
     section#projects div.projects div.all_projects div.project_item { flex-direction: row; background: transparent; border-radius: 0px; box-shadow: none;}
     section#projects div.projects div.all_projects div.project_item:nth-child(even) { flex-direction: row-reverse; }
@@ -161,19 +153,21 @@ section#footer div.footer a.social_media_icon i:hover { transform: scale(0.8); t
     section#projects div.projects div.all_projects div.project_item.downright_border { border-bottom-right-radius: 30px; }
     section#projects div.projects div.all_projects div.project_item div.project_info { height: 400px; border-radius: 0px; background-color: #B1BECD; position: relative; z-index: -1; }
     section#projects div.projects div.all_projects div.project_item div.project_info::after { content: ''; width: 95%; height: 95%; background-color: #485563; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 1; border-radius: 30px; box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.3); }
-    section#projects div.projects div.all_projects div.project_item div.project_info h1 { font-size: 2.2rem; position: relative; top: 5px; z-index: 2; }  
-    section#projects div.projects div.all_projects div.project_item div.project_info p { font-size: 1.5rem; line-height: 2.5rem; position: relative; z-index: 2; }
-    section#projects div.projects div.all_projects div.project_item div.project_info p span { color: #496D96; }
-    section#projects div.projects div.all_projects div.project_item div.project_info.right p { text-align: right; }
+    section#projects div.projects div.all_projects div.project_item div.project_info h1.project_title { font-size: 2rem; position: relative; top: 5px; z-index: 2; }  
+    section#projects div.projects div.all_projects div.project_item div.project_info p.project_description  { font-size: 1.6rem; line-height: 2.2rem; position: relative; z-index: 2; }
+    section#projects div.projects div.all_projects div.project_item div.project_info p.project_description span.project_detail { color: #496D96; }
+    section#projects div.projects div.all_projects div.project_item div.project_info.right p.project_description { text-align: right; }
     section#projects div.projects div.all_projects div.project_item div.project_image { height: 400px; display: flex; justify-content: center; align-items: center; box-shadow: none; }
     section#projects div.projects div.all_projects div.project_item div.project_image::after { display: none; height: 100%; width: 50%; border-radius: 0px; }
     section#projects div.projects div.all_projects div.project_item div.project_image img { transition: 0.3s ease; transition-property: transform; width: 90%; height: auto; transform: scale(0.90); }
-    section#projects div.projects div.all_projects div.project_item:hover div.project_image img { transform: scale(0.70); }
     /* End Projects Section */
     /* Contact Section */
-    section#contact div.contact div h1.section_title { font-size: 4rem; }
-    section#contact div.contact div p { font-size: 1.6rem; padding: 0px 40px; }
+    section#contact div.contact div.contact_header h1.section_title { font-size: 4rem; }
+    section#contact div.contact div.contact_header p { font-size: 1.8rem; padding: 0px 40px; }
     section#contact div.contact div.contact_items { margin-top: 70px; flex-direction: row; flex-wrap: wrap; }
+    section#contact div.contact div.contact_items div.contact_item div.contact_info h1.contact_title { font-size: 2rem; }
+    section#contact div.contact div.contact_items div.contact_item div.contact_info h2.contacter { font-size: 1.6rem; }
+    section#contact div.contact div.contact_items div.contact_item div.contact_info h3.contact_detail { font-size: 1.6em; }
     /* End Contact Section */
     /* Footer Section */
     section#footer div.footer { min-height: 200px; }
